--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ershov-ilya/timer.class.php",
+    "name": "Multi Timer",
     "description": "Multi timer with tree-structured dependences",
     "type": "library",
     "license": "MIT",
